Day 1 string and math

--- a/exercises/Exercise1-0_HelloWorld.ipynb
+++ b/exercises/Exercise1-0_HelloWorld.ipynb
@@ -56,7 +56,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Introduction to Python\n",
     "\n",
@@ -79,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a print statement.\n"
+     ]
+    }
+   ],
    "source": [
     "print( 'This is a print statement.' )"
    ]
@@ -96,6 +106,43 @@
     "   📚 Practice 1.\n",
     "    In the following cell, use the <code>print()</code> command to print the line \"Hello, World!\")\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, World!\")"
    ]
   },
   {
@@ -123,9 +170,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your first name?  Erica\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Erica.\n"
+     ]
+    }
+   ],
    "source": [
     "name = input( 'What is your first name? ' )\n",
     "print( 'My name is ' + name + '.' )"
@@ -194,9 +256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This comment will not be read by the computer.\n",
     "2 + 2  # Neither will this."
@@ -211,9 +284,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    div.run { \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        padding: 10px; \n",
+       "        background-color: #b2dcdf; \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.example { \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        padding: 10px; \n",
+       "        background-color: #b2dcdf; \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px;\n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.practice { \n",
+       "        border: 0.5px solid #008C96;  \n",
+       "        padding: 10px;  \n",
+       "        background-color: #b2dcdf;  \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px;\n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.python { \n",
+       "        border: 0.5px solid #408000; \n",
+       "        padding: 10px; \n",
+       "        background-color: #cddfb4; \n",
+       "        color:#2c5900; \n",
+       "        margin-top: 12px\n",
+       "    }\n",
+       "    div.data { \n",
+       "        border: 0.5px solid #443823; \n",
+       "        padding: 10px; \n",
+       "        background-color: #ead8b9; \n",
+       "        color:#443823; \n",
+       "        margin-top: 12px\n",
+       "    }\n",
+       "    div.codeblock { \n",
+       "        border: 0.2px solid #808080;\n",
+       "        padding: 10px; \n",
+       "        background-color: #DBDBDB; \n",
+       "        margin-top: 2px\n",
+       "    }   \n",
+       "    div.boxhead1 { \n",
+       "        border-radius: 4px 4px 0px 0px; \n",
+       "        padding: 6px; \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        background-color: #b2dcdf; \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px; \n",
+       "        font-size: 115%; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.boxtext1 { \n",
+       "        border-radius: 0px 0px 4px 4px; \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        padding: 12pt; \n",
+       "        color:#006269 \n",
+       "    }\n",
+       "    div.boxhead2 {\n",
+       "        border-radius: 4px 4px 0px 0px; \n",
+       "        padding: 6px; \n",
+       "        border: 0.5px solid #73AD21; \n",
+       "        background-color: #c7dea6; \n",
+       "        color:#486d15; \n",
+       "        margin-top: 12px; \n",
+       "        font-size: 115%; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.boxtext2 { \n",
+       "        border-radius: 0px 0px 4px 4px; \n",
+       "        border: 0.5px solid #73AD21; \n",
+       "        padding: 12pt; \n",
+       "        color:#486d15\n",
+       "    }\n",
+       "    div.boxhead3 {\n",
+       "        border-radius: 4px 4px 0px 0px; \n",
+       "        padding: 6px; \n",
+       "        border: 0.5px solid #e66800; \n",
+       "        background-color: #f7d1b2; \n",
+       "        color:#cd5c00; \n",
+       "        margin-top: 12px; \n",
+       "        font-size: 115%; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.boxtext3 { \n",
+       "        border-radius: 0px 0px 4px 4px; \n",
+       "        border: 0.5px solid #e66800; \n",
+       "        padding: 12pt; \n",
+       "        color:#cd5c00\n",
+       "    }\n",
+       "    span.code {\n",
+       "        font-family: Lucida Console, Courier, monospace;\n",
+       "        font-weight: normal;\n",
+       "    }\n",
+       "    span.codeb {\n",
+       "        font-family: Lucida Console, Courier, monospace;\n",
+       "        font-weight: bold;\n",
+       "    }\n",
+       "    ol.num {\n",
+       "        margin: 0pt;\n",
+       "        margin-top: 12pt; \n",
+       "        margin-bottom: 2pt; \n",
+       "        margin-left: 4pt; \n",
+       "        padding-bottom: 4pt; \n",
+       "    }\n",
+       "    ol.alpha {\n",
+       "        list-style-type: lower-alpha;\n",
+       "        margin: 0pt;\n",
+       "        margin-left: 4pt;\n",
+       "        margin-top: 2pt;\n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    ul.a {\n",
+       "        list-style-type: none; \n",
+       "        margin-left: -20pt;\n",
+       "        font-weight: bold;\n",
+       "    }\n",
+       "\n",
+       "    ul.b {\n",
+       "        list-style-type: square; \n",
+       "        font-weight: normal; \n",
+       "        margin-left: 20pt; \n",
+       "        margin-top: 4pt; \n",
+       "        padding-bottom: 12pt;\n",
+       "    }\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# IGNORE THIS CELL\n",
     "from IPython.core.display import HTML\n",
