--- a/exercises/Exercise1-3_ControlFlowStatements.ipynb
+++ b/exercises/Exercise1-3_ControlFlowStatements.ipynb
@@ -94,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define x\n",
-    "x = 4\n",
+    "x = -2\n",
     "# Evaluate condition\n",
     "if x > 0:\n",
     "    print('x is a positive number.')"
@@ -146,10 +146,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Temperature? 32\n",
+      "What units? F\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0C\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = input('Temperature?')\n",
+    "unit = input('What units?')\n",
+    "if unit[0].capitalize() == 'F':\n",
+    "    in_c = (float(temp) - 32) * (5 / 9)\n",
+    "    print(str(in_c) + \"C\")\n",
+    "elif unit == 'C' or unit == 'Celcius':\n",
+    "    print((9/5) * float(temp) + 32)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,9 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adenine is not an amino acid.\n"
+     ]
+    }
+   ],
    "source": [
     "# List of amino acids\n",
     "aminoacids = ['histidine', 'isoleucine', 'leucine', 'lysine', 'methionine', \n",
@@ -211,9 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valine is an essential, non-aromatic amino acid.\n"
+     ]
+    }
+   ],
    "source": [
     "essential = ['histidine', 'lysine', 'threonine', 'tryptophan', \n",
     "             'valine', 'methionine', 'leucine', 'phenylalanine']\n",
@@ -244,9 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valine is a polar amino acid.\n"
+     ]
+    }
+   ],
    "source": [
     "charged = ['arginine', 'lysine', 'aspartate', 'glutamate']\n",
     "polar_un = ['glutamine', 'asparagine', 'histidine', 'serine', 'threonine', 'tyrosine', 'cysteine']\n",
@@ -288,10 +336,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Temperature? 20\n",
+      "What units? F\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The temperature is-6.666666666666667C. It is below freezing!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Required inputs\n",
+    "temp = input('Temperature?')\n",
+    "unit = input('What units?')\n",
+    "\n",
+    "if unit[0].capitalize() == 'F':\n",
+    "    in_c = (float(temp) - 32) * (5 / 9)\n",
+    "    if in_c < 0:\n",
+    "        print(\"The temperature is\" + str(in_c) + \"C. I hope it is snowing!\")\n",
+    "    else:\n",
+    "        print(\"The temperature is above freezing!\")\n",
+    "elif unit == 'C' or unit == 'Celcius':\n",
+    "    in_f = ((9/5) * float(temp) + 32)\n",
+    "    if in_f < 32:\n",
+    "        print(\"The temperature is\" + str(in_f) + \"F. Get some hot cocoa!\")\n",
+    "    else:\n",
+    "        print(\"The temperature is above freezing!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -370,13 +451,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 1 value of org-elements is oxygen\n",
+      "The 2 value of org-elements is carbon\n",
+      "The 3 value of org-elements is hydrogen\n",
+      "The 4 value of org-elements is nitrogen\n",
+      "The 5 value of org-elements is calcium\n",
+      "The 6 value of org-elements is phosphorus\n"
+     ]
+    }
+   ],
    "source": [
     "# Define org_elements\n",
-    "\n",
-    "# Print each element in org_elements\n"
+    "org_elements = [\"oxygen\", \"carbon\", \"hydrogen\", \"nitrogen\", \"calcium\", \"phosphorus\"]\n",
+    "# Print each element in org_elements\n",
+    "for index_value,element in enumerate(org_elements):\n",
+    "    print(f\"The {index_value+1} value of org-elements is {element}\")"
    ]
   },
   {
@@ -410,12 +506,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The element N2 has an atomic weight of 12.011\n",
+      "The element O2 has an atomic weight of 1.00784\n",
+      "The element Ar has an atomic weight of 14.0067\n",
+      "The element H2O has an atomic weight of 15.999\n",
+      "The element CO2 has an atomic weight of 30.97376\n"
+     ]
+    }
+   ],
    "source": [
     "# Define list of atomic masses of 6 most abundant elements\n",
+    "gases = ['N2', 'O2', 'Ar', 'H2O', 'CO2']\n",
     "atomic_mass = [12.011, 1.00784, 14.0067, 15.999, 30.97376, 32.065]  # g/mol\n",
     "\n",
-    "# Iterate through org_elements + print the atomic mass of each element\n"
+    "# Iterate through org_elements + print the atomic mass of each element\n",
+    "for i,gas in enumerate(gases):\n",
+    "    mass = float(atomic_mass[i])\n",
+    "    print(f\"The element {gas} has an atomic weight of {atomic_mass[i]}\")"
    ]
   },
   {
@@ -454,10 +566,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The atomic mass of oxygen is 12.011\n",
+      "The atomic mass of carbon is 1.00784\n",
+      "The atomic mass of hydrogen is 14.0067\n",
+      "The atomic mass of nitrogen is 15.999\n",
+      "The atomic mass of calcium is 30.97376\n",
+      "The atomic mass of phosphorus is 32.065\n"
+     ]
+    }
+   ],
+   "source": [
+    "for elem,mass in zip(org_elements,atomic_mass):\n",
+    "    print(f\"The atomic mass of {elem} is {mass}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -534,9 +662,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'float' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [71]\u001b[0m, in \u001b[0;36m<cell line: 16>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m yearlyClist \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp \u001b[38;5;129;01min\u001b[39;00m yearlylist:\n\u001b[0;32m---> 19\u001b[0m     tempC \u001b[38;5;241m=\u001b[39m (((\u001b[43mtemp\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m32\u001b[39m) \u001b[38;5;241m*\u001b[39m (\u001b[38;5;241m5\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m9\u001b[39m)) \u001b[38;5;66;03m# Change to C\u001b[39;00m\n\u001b[1;32m     20\u001b[0m     yearlyClist\u001b[38;5;241m.\u001b[39mappend(tempC)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'float' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "# Import numpy for mean calculations\n",
     "import numpy as np\n",
@@ -547,8 +687,21 @@
     "tempF_2017 = [61.844, 62.114, 62.114, 61.736, 61.682, 61.34, 61.556, 61.646, 61.448, 61.664, 61.628, 61.682]\n",
     "tempF_2018 = [61.466, 61.61, 61.718, 61.646, 61.538, 61.412, 61.484, 61.394, 61.448, 61.862, 61.484, 61.682]\n",
     "\n",
+    "# Combined list of the yearly lists\n",
+    "tempF = [tempF_2015, tempF_2016, tempF_2017, tempF_2018]\n",
+    "\n",
+    "# Monthly temps in C\n",
+    "\n",
+    "tempC = [] # Initialize empty list\n",
+    "for yearlylist in tempF:\n",
+    "    yearlyClist = []\n",
+    "    for temp in yearlylist:\n",
+    "        tempC = (((temp[i]) - 32) * (5 / 9)) # Change to C\n",
+    "        yearlyClist.append(tempC)\n",
+    "\n",
+    "\n",
     "# List of yearly lists (may or may not be useful)\n",
-    "tempC_list = [tempC_2015, tempC_2016, tempC_2017, tempC_2018]\n",
+    "# tempC_list = [tempC_2015, tempC_2016, tempC_2017, tempC_2018]\n",
     "\n"
    ]
   },
@@ -583,9 +736,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is the answer to life, the universe, and everything?  72\n",
+      "What is the answer to life, the universe, and everything?  80\n",
+      "What is the answer to life, the universe, and everything?  42\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a blank string variable\n",
     "user_txt = \"\"\n",
@@ -640,9 +803,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the answer to life, the universe, and everything? \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "   Your answer:  72\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nope. Try again...\n",
+      "\n",
+      "What is the answer to life, the universe, and everything? \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "   Your answer:  80\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nope. Try again...\n",
+      "\n",
+      "What is the answer to life, the universe, and everything? \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "   Your answer:  46\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nope. Try again...\n",
+      "\n",
+      "What is the answer to life, the universe, and everything? \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "   Your answer:  12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nope. Try again...\n",
+      "\n",
+      "What is the answer to life, the universe, and everything? \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "   Your answer:  42\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have solved the ultimate question.\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    print(\"What is the answer to life, the universe, and everything? \")\n",
@@ -672,9 +921,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.5\n",
+      "11.2671\n",
+      "0.0\n",
+      "36052.0\n",
+      "-466.07\n",
+      "3.0\n",
+      "-11.5\n"
+     ]
+    }
+   ],
    "source": [
     "for x in [47, 22.5342, 'four hundred eighty-two', 0, 72104, -932.14, 6, -23, 'eleven']:\n",
     "    # Check to see if value is a string\n",
@@ -734,9 +997,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 4, 16, 36, 64, 100, 144, 196, 256, 324, 400, 484, 576, 676, 784, 900]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "[x*x for x in range(math.ceil(math.sqrt(1000))) if x%2 ==0]"
