--- a/exercises/Exercise1-2_Lists.ipynb
+++ b/exercises/Exercise1-2_Lists.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,15 +123,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "min: -12 max: 4391\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the length of num_list\n",
+    "print(len(num_list))\n",
     "\n",
     "# Minimum value of num_list\n",
+    "min(num_list)\n",
     "\n",
-    "# Maximum value of num_list\n"
+    "# Maximum value of num_list\n",
+    "max(num_list)\n",
+    "\n",
+    "print(f\"min: {min(num_list)} max: {max(num_list)}\")"
    ]
   },
   {
@@ -165,13 +179,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 23, 654, 2, 0, -12, 4391]\n",
+      "23\n",
+      "23\n"
+     ]
+    }
+   ],
    "source": [
     "# Option 1\n",
+    "print(num_list)\n",
+    "print(num_list[1])\n",
     "\n",
-    "# Option 2\n"
+    "# Option 2\n",
+    "print(num_list[-6])"
    ]
   },
   {
@@ -222,17 +249,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 14, 72, 83)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define a new list called my_list.\n",
-    "\n",
+    "my_list = 5, 6, 14, 72, 83, 134\n",
     "# Find the 5th element.\n",
-    "\n",
+    "my_list[4]\n",
     "# New list with every other value.\n",
-    "\n",
-    "# Remove first and last values. \n"
+    "my_list[::2]\n",
+    "# Remove first and last values. \n",
+    "my_list[1:-1]"
    ]
   },
   {
@@ -260,10 +299,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['energy', 'water', 'carbon']\n",
+      "carbon\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str_list)\n",
+    "var = str_list[2]\n",
+    "print(var)\n",
+    "print(var[1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -281,9 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['red', 'blue', 'green', 'black', 'white', 'pink']\n"
+     ]
+    }
+   ],
    "source": [
     "colors = ['red', 'blue', 'green', 'black', 'white']\n",
     "colors.append('pink')\n",
@@ -311,10 +373,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['red', 'blue', 'green', 'black', 'gray', 'gray', 'pink', 'gray']\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors.insert(-1, 'pink')\n",
+    "print(colors)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,10 +415,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['red', 'blue', 'green', 'pink', 'gray']\n"
+     ]
+    }
+   ],
+   "source": [
+    "del colors[3]\n",
+    "print(colors)\n",
+    "\n",
+    "colors.remove('pink')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -361,9 +447,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5, 3.333, 3.42, 5.1, 5.8, 7.44, 26.0, 39.0, 100.4]\n"
+     ]
+    }
+   ],
    "source": [
     "rand_list = [5.1 , 3.42 , 3.333 , 100.4 , 0.5 , 26.0 , 7.44 , 5.8 , 39.0]\n",
     "rand_list.sort()\n",
@@ -489,10 +583,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 1, 2, 3)\n",
+      "(4, 5, 6, 4, 5, 6, 4, 5, 6, 4, 5, 6)\n"
+     ]
+    }
+   ],
    "source": [
+    "str_list = 1,2,3\n",
+    "num_list = 4,5,6\n",
     "str_list2 = str_list * 2\n",
     "num_list4 = num_list * 4\n",
     "print( str_list2 )\n",
@@ -542,22 +647,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000]\n"
+     ]
+    }
+   ],
    "source": [
     "# Construct a list of hundreds from 0 to 1000\n",
-    "\n",
-    "# Print your list\n"
+    "hundos = list(range(0,1001,100))\n",
+    "# Print your list\n",
+    "print(hundos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "cell.metadata.hide_input": "True"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    div.run { \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        padding: 10px; \n",
+       "        background-color: #b2dcdf; \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.example { \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        padding: 10px; \n",
+       "        background-color: #b2dcdf; \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px;\n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.practice { \n",
+       "        border: 0.5px solid #008C96;  \n",
+       "        padding: 10px;  \n",
+       "        background-color: #b2dcdf;  \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px;\n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.python { \n",
+       "        border: 0.5px solid #408000; \n",
+       "        padding: 10px; \n",
+       "        background-color: #cddfb4; \n",
+       "        color:#2c5900; \n",
+       "        margin-top: 12px\n",
+       "    }\n",
+       "    div.data { \n",
+       "        border: 0.5px solid #443823; \n",
+       "        padding: 10px; \n",
+       "        background-color: #ead8b9; \n",
+       "        color:#443823; \n",
+       "        margin-top: 12px\n",
+       "    }\n",
+       "    div.codeblock { \n",
+       "        border: 0.2px solid #808080;\n",
+       "        padding: 10px; \n",
+       "        background-color: #DBDBDB; \n",
+       "        margin-top: 2px\n",
+       "    }   \n",
+       "    div.boxhead1 { \n",
+       "        border-radius: 4px 4px 0px 0px; \n",
+       "        padding: 6px; \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        background-color: #b2dcdf; \n",
+       "        color:#006269; \n",
+       "        margin-top: 12px; \n",
+       "        font-size: 115%; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.boxtext1 { \n",
+       "        border-radius: 0px 0px 4px 4px; \n",
+       "        border: 0.5px solid #008C96; \n",
+       "        padding: 12pt; \n",
+       "        color:#006269 \n",
+       "    }\n",
+       "    div.boxhead2 {\n",
+       "        border-radius: 4px 4px 0px 0px; \n",
+       "        padding: 6px; \n",
+       "        border: 0.5px solid #73AD21; \n",
+       "        background-color: #c7dea6; \n",
+       "        color:#486d15; \n",
+       "        margin-top: 12px; \n",
+       "        font-size: 115%; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.boxtext2 { \n",
+       "        border-radius: 0px 0px 4px 4px; \n",
+       "        border: 0.5px solid #73AD21; \n",
+       "        padding: 12pt; \n",
+       "        color:#486d15\n",
+       "    }\n",
+       "    div.boxhead3 {\n",
+       "        border-radius: 4px 4px 0px 0px; \n",
+       "        padding: 6px; \n",
+       "        border: 0.5px solid #e66800; \n",
+       "        background-color: #f7d1b2; \n",
+       "        color:#cd5c00; \n",
+       "        margin-top: 12px; \n",
+       "        font-size: 115%; \n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    div.boxtext3 { \n",
+       "        border-radius: 0px 0px 4px 4px; \n",
+       "        border: 0.5px solid #e66800; \n",
+       "        padding: 12pt; \n",
+       "        color:#cd5c00\n",
+       "    }\n",
+       "    span.code {\n",
+       "        font-family: Lucida Console, Courier, monospace;\n",
+       "        font-weight: normal;\n",
+       "    }\n",
+       "    span.codeb {\n",
+       "        font-family: Lucida Console, Courier, monospace;\n",
+       "        font-weight: bold;\n",
+       "    }\n",
+       "    ol.num {\n",
+       "        margin: 0pt;\n",
+       "        margin-top: 12pt; \n",
+       "        margin-bottom: 2pt; \n",
+       "        margin-left: 4pt; \n",
+       "        padding-bottom: 4pt; \n",
+       "    }\n",
+       "    ol.alpha {\n",
+       "        list-style-type: lower-alpha;\n",
+       "        margin: 0pt;\n",
+       "        margin-left: 4pt;\n",
+       "        margin-top: 2pt;\n",
+       "        font-weight: bold\n",
+       "    }\n",
+       "    ul.a {\n",
+       "        list-style-type: none; \n",
+       "        margin-left: -20pt;\n",
+       "        font-weight: bold;\n",
+       "    }\n",
+       "\n",
+       "    ul.b {\n",
+       "        list-style-type: square; \n",
+       "        font-weight: normal; \n",
+       "        margin-left: 20pt; \n",
+       "        margin-top: 4pt; \n",
+       "        padding-bottom: 12pt;\n",
+       "    }\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
