--- a/exercises/Exercise1-3_ControlFlowStatements.ipynb
+++ b/exercises/Exercise1-3_ControlFlowStatements.ipynb
@@ -997,23 +997,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 4, 16, 36, 64, 100, 144, 196, 256, 324, 400, 484, 576, 676, 784, 900]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100]\n",
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100]\n",
+      "['astuff', 'bstuff', 'cstuff']\n"
+     ]
     }
    ],
    "source": [
     "import math\n",
-    "[x*x for x in range(math.ceil(math.sqrt(1000))) if x%2 ==0]"
+    "[x*x for x in range(math.ceil(math.sqrt(1000))) if x%2 ==0]\n",
+    "\n",
+    "# Compare below examples\n",
+    "even1 = [x for x in range(101) if x%2 == 0]\n",
+    "print(even1)\n",
+    "\n",
+    "# Versus\n",
+    "evens = []\n",
+    "for x in range(101):\n",
+    "    if x%2 == 0:\n",
+    "        evens.append(x)\n",
+    "print(evens)\n",
+    "\n",
+    "list_a = ['a', 'b', 'c']\n",
+    "def f(x):\n",
+    "    return x + 'stuff'\n",
+    "new_list = [f(value) for value in list_a]\n",
+    "print(new_list)"
    ]
   },
   {
