--- a/exercises/Exercise1-5_FunctionsObjectsClasses.ipynb
+++ b/exercises/Exercise1-5_FunctionsObjectsClasses.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,10 +147,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.22222222222222"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_F_to_C(72)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,10 +212,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'NoneType' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     temp_C \u001b[38;5;241m=\u001b[39m (temp_F\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m32\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m5.\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m9.\u001b[39m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m temp_C\n\u001b[0;32m----> 4\u001b[0m \u001b[43mconvert_F_to_C\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36mconvert_F_to_C\u001b[0;34m(temp_F)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconvert_F_to_C\u001b[39m(temp_F\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m----> 2\u001b[0m     temp_C \u001b[38;5;241m=\u001b[39m (\u001b[43mtemp_F\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m32\u001b[39;49m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m5.\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m9.\u001b[39m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m temp_C\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'NoneType' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_F_to_C(temp_F):\n",
+    "    '''\n",
+    "    This code will convert any temperature measured in F to C\n",
+    "    Parameters:\n",
+    "        temp_f\n",
+    "    Return: temp in C\n",
+    "    \n",
+    "    '''\n",
+    "    temp_C = (temp_F-32)*5./9.\n",
+    "    return temp_C\n",
+    "convert_F_to_C()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,9 +257,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mconvert_temp_to_C\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Converts a temperature to Celsius\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "    temp : float\n",
+       "        Temperature value to convert\n",
+       "    unit : str\n",
+       "        temp units ('K' or 'F')\n",
+       "   \n",
+       "Returns\n",
+       "-------\n",
+       "    temp_C : float\n",
+       "        The value of temp converted to Celsius\n",
+       "\u001b[0;31mFile:\u001b[0m      /tmp/ipykernel_3285955/4032560989.py\n",
+       "\u001b[0;31mType:\u001b[0m      function\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def convert_temp_to_C(temp, unit):\n",
     "    \"\"\" Converts a temperature to Celsius\n",
@@ -242,7 +306,10 @@
     "        temp_C = temp - 273.15\n",
     "    elif unit == 'F':\n",
     "        temp_C = (temp-32)*5./9.\n",
-    "    return temp_C"
+    "    return temp_C\n",
+    "\n",
+    "\n",
+    "convert_temp_to_C?"
    ]
   },
   {
@@ -286,10 +353,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "323.15"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def convert_temp_to_k(temp, unit='F'):\n",
+    "    '''\n",
+    "    This code will convert input temperature into Kelvin\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    temp: input a float or integer number of temperature value\n",
+    "    unit: F or C, not case sensitive\n",
+    "    \n",
+    "    Result\n",
+    "    ------\n",
+    "    the converted temperature in Kelvin\n",
+    "    '''\n",
+    "    if unit.capitalize() == 'C':\n",
+    "        temp_K = temp + 273.15\n",
+    "    elif unit.capitalize() == 'F':\n",
+    "        temp_K = (temp - 32) * 5/9 + 273.15 \n",
+    "    else:\n",
+    "        raise ValueError(f\"The value of ({unit}) must be C or F\")\n",
+    "    return temp_K\n",
+    "\n",
+    "convert_temp_to_k(50, 'C')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -315,10 +416,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The value of (d) must be C or F",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [26]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mconvert_temp_to_k\u001b[49m\u001b[43m(\u001b[49m\u001b[43munit\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43md\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtemp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m72\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [25]\u001b[0m, in \u001b[0;36mconvert_temp_to_k\u001b[0;34m(temp, unit)\u001b[0m\n\u001b[1;32m     15\u001b[0m     temp_K \u001b[38;5;241m=\u001b[39m (temp \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m32\u001b[39m) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m5\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m9\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m273.15\u001b[39m \n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 17\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe value of (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00munit\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) must be C or F\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m temp_K\n",
+      "\u001b[0;31mValueError\u001b[0m: The value of (d) must be C or F"
+     ]
+    }
+   ],
+   "source": [
+    "convert_temp_to_k(unit = 'd', temp = 72)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -359,10 +475,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "307.15"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ktemp = lambda Ctemp: Ctemp + 273.15\n",
+    "Ktemp(34)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -433,10 +563,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function convert_temp_to_k in module __main__:\n",
+      "\n",
+      "convert_temp_to_k(temp, unit)\n",
+      "    This code will convert inputted temperature into Kelvin\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    temp and unit (F or C)\n",
+      "    \n",
+      "    Result\n",
+      "    ------\n",
+      "    temp in K!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(convert_temp_to_k)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -465,13 +616,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Temperature object at 0x7f81a173dab0>\n"
+     ]
+    }
+   ],
    "source": [
     "class Temperature:\n",
     "    value = 74.0\n",
-    "    unit = 'F'"
+    "    unit = 'F'\n",
+    "    \n",
+    "temp = Temperature()\n",
+    "my_string = str()\n",
+    "temp.unit\n",
+    "\n",
+    "integer = int()\n",
+    "print(temp)"
    ]
   },
   {
@@ -592,7 +758,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "We do not provide legal representation or advice, but rather education, information and self-help services to assist help students to solve problems and obtain favorable results.\n",
     "### User Defined Class Methods\n",
     "\n",
     "We often want to create our own methods that allow us to manipulate and work with class data. For example, now that we have a `Temperature` class, we might want to create a method that allows us to get the value of temperature in any unit. We can add this functionality by defining a class method. The class method is just the same as every other Python function, except, like `__init__()`, it has `self` as its first argument:\n",
@@ -643,10 +809,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "323.15"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Temperature:\n",
+    "    \n",
+    "    def __init__(self, value=74.0, unit='F'):\n",
+    "        self.value = value\n",
+    "        self.unit = unit\n",
+    "        self.temp_K = self.get_K()\n",
+    "\n",
+    "    def get_K(self):\n",
+    "        \n",
+    "        unit = self.unit\n",
+    "        T = self.value\n",
+    "\n",
+    "        # If T is in Fahrenheit, convert to C:\n",
+    "        if unit == 'F':\n",
+    "            T = (T - 32) * (5./9.)\n",
+    "            unit = 'C' # Re-assign unit to C\n",
+    "        \n",
+    "        # If T is in Celsius, convert to Kelvin\n",
+    "        if unit == 'C':\n",
+    "            T = T + 273.15\n",
+    "\n",
+    "        return T\n",
+    "    \n",
+    "my_temp = Temperature(50,'C')\n",
+    "my_temp.get_K()"
+   ]
   },
   {
    "cell_type": "markdown",
