--- a/exercises/Exercise2-1_Numpy.ipynb
+++ b/exercises/Exercise2-1_Numpy.ipynb
@@ -193,10 +193,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  4,   5,   0,  12,  -1],\n",
+       "       [  8, -21,  -4,   6,   3],\n",
+       "       [ 17,   1, -13,   7,   0]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array([[4,5,0,12,-1], [8,-21,-4,6,3], [17,1,-13,7,0]])\n",
+    "b = np.array([[1.0]])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,10 +262,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1   4   7  10  13  16  19  22  25  28  31  34  37  40  43  46  49  52\n",
+      "  55  58  61  64  67  70  73  76  79  82  85  88  91  94  97 100]\n",
+      "[0.         0.22222222 0.44444444 0.66666667 0.88888889 1.11111111\n",
+      " 1.33333333 1.55555556 1.77777778 2.        ]\n",
+      "[0.  0.4 0.8 1.2 1.6 2. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = np.arange(1,101,3)\n",
+    "print(d)\n",
+    "f = np.linspace(0,2,10)\n",
+    "print(f)\n",
+    "g = np.arange(0.,2.4,.4)\n",
+    "print(g)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,10 +359,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "[0. 0. 0. 0. 0. 0.]\n",
+      "[[1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]]\n",
+      "[[0.12537477 0.19364335 0.11396634 0.97573868 0.14880255 0.85014149\n",
+      "  0.01226254 0.51536829 0.83824956 0.73072326]\n",
+      " [0.99508017 0.17247389 0.40929122 0.53952928 0.67864113 0.09423904\n",
+      "  0.72727511 0.18282383 0.39145021 0.50094471]\n",
+      " [0.07807554 0.01900978 0.1774296  0.47527892 0.13172571 0.04655896\n",
+      "  0.76314943 0.14257253 0.28904924 0.57827423]\n",
+      " [0.27592786 0.00836287 0.31681171 0.60768187 0.11325199 0.02332558\n",
+      "  0.2489981  0.79655442 0.51417465 0.00178545]\n",
+      " [0.30857615 0.24205521 0.80450418 0.44997747 0.56999272 0.18229097\n",
+      "  0.85981431 0.73325017 0.10956042 0.68973421]\n",
+      " [0.18113691 0.0862194  0.36699378 0.46045237 0.95416448 0.92861309\n",
+      "  0.83179048 0.02092755 0.16814899 0.50518767]\n",
+      " [0.46730089 0.14009938 0.28122066 0.46629398 0.95339474 0.54711812\n",
+      "  0.08468631 0.49471705 0.6472446  0.01931299]\n",
+      " [0.5781475  0.74670748 0.01046273 0.28803057 0.60489271 0.49769453\n",
+      "  0.62091708 0.65034835 0.41466487 0.08110523]\n",
+      " [0.52429776 0.91315123 0.18733754 0.07437749 0.71112951 0.49015103\n",
+      "  0.97396661 0.1881134  0.72064657 0.8855103 ]\n",
+      " [0.62766883 0.67361605 0.83519131 0.6567634  0.76661356 0.64246469\n",
+      "  0.81693325 0.43826278 0.67827095 0.49586788]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a3 = np.ones((5,3))\n",
+    "print(a3)\n",
+    "b3 = np.zeros(6)\n",
+    "print(b3)\n",
+    "c3 = np.eye(10)\n",
+    "print(c3)\n",
+    "d3 = np.random.rand(10,10)\n",
+    "print(d3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -381,10 +469,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8]\n",
+      " [0]\n",
+      " [9]\n",
+      " [1]\n",
+      " [4]] 2 (5, 1)\n",
+      "[8 0 9 1 4] 1 (5, 1)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [54]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m rarray \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m9\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m4\u001b[39m])\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(rarray, rarray\u001b[38;5;241m.\u001b[39mndim, carray\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m----> 7\u001b[0m \u001b[43mcarray\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtype\u001b[49m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'type'"
+     ]
+    }
+   ],
+   "source": [
+    "carray = np.array([[8],[0],[9],[1],[4]])\n",
+    "print(carray, carray.ndim, carray.shape)\n",
+    "\n",
+    "rarray = np.array([8,0,9,1,4])\n",
+    "print(rarray, rarray.ndim, carray.shape)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,10 +516,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = np.arange(1,101,3)\n",
+    "np.size(d)\n",
+    "d.size"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -476,10 +610,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.64813989 0.21209275 0.09112426 0.59046175]\n",
+      " [0.23767569 0.38536632 0.28805242 0.03584788]\n",
+      " [0.87755093 0.21644697 0.28832259 0.30961459]\n",
+      " [0.92432112 0.82685063 0.78247682 0.47770541]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.56586647, 0.70688185])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d3 = np.random.rand(10,10)\n",
+    "\n",
+    "a5 = d3[:,5]\n",
+    "\n",
+    "b5 = d3[7,:]\n",
+    "\n",
+    "c5 = d3[4:8,4:8]\n",
+    "print(c5)\n",
+    "\n",
+    "d3[8:10,9]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -492,10 +658,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a =np.zeros((8,8))\n",
+    "a[::2, ::2] = 1\n",
+    "a[1::2, 1::2] = 1\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -703,10 +889,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n",
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n",
+      "[[8 7 6]\n",
+      " [5 4 3]\n",
+      " [2 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(0,9).reshape(3,3)\n",
+    "print(a)\n",
+    "b = np.flip(a)\n",
+    "np.flipud(a)\n",
+    "np.fliplr(a)\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -785,6 +994,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.13154539 0.80931832 0.19936244 0.82007263 0.28575163 0.12633942\n",
+      "  0.22805275 0.7038159  0.8785462  0.81146413]\n",
+      " [0.7973458  0.94467962 0.14552495 0.42509524 0.48995847 0.33490412\n",
+      "  0.33723692 0.97271993 0.14725085 0.17680845]]\n",
+      "[[0.13154539 0.7973458 ]\n",
+      " [0.80931832 0.94467962]\n",
+      " [0.19936244 0.14552495]\n",
+      " [0.82007263 0.42509524]\n",
+      " [0.28575163 0.48995847]\n",
+      " [0.12633942 0.33490412]\n",
+      " [0.22805275 0.33723692]\n",
+      " [0.7038159  0.97271993]\n",
+      " [0.8785462  0.14725085]\n",
+      " [0.81146413 0.17680845]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a8 = np.random.rand(1, 10)\n",
+    "a8.ndim\n",
+    "b8 = np.random.rand(1, 10)\n",
+    "c8 = np.concatenate((a8, b8))\n",
+    "print(c8)\n",
+    "d8 = np.concatenate((a8.T,b8.T), axis = 1)\n",
+    "print(d8)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -841,10 +1086,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]\n",
+      " [0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 1. 1.]\n",
+      " [1. 0. 0. 0. 0.]\n",
+      " [1. 1. 0. 0. 0.]\n",
+      " [1. 1. 0. 0. 1.]\n",
+      " [1. 1. 1. 0. 1.]\n",
+      " [0. 1. 1. 0. 1.]] \n",
+      "\n",
+      "\n",
+      " [[0. 1. 1. 1. 1.]\n",
+      " [0. 0. 1. 0. 0.]\n",
+      " [1. 1. 0. 1. 1.]\n",
+      " [1. 0. 0. 1. 0.]\n",
+      " [1. 0. 0. 1. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [1. 0. 1. 0. 1.]\n",
+      " [1. 1. 0. 1. 0.]\n",
+      " [0. 1. 1. 1. 1.]\n",
+      " [0. 1. 0. 1. 1.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 3., 3., 3., 3., 3.],\n",
+       "       [1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 3., 3., 3., 3., 3.],\n",
+       "       [1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 3., 3., 3., 3., 3.],\n",
+       "       [1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 3., 3., 3., 3., 3.],\n",
+       "       [1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 3., 3., 3., 3., 3.],\n",
+       "       [1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 3., 3., 3., 3., 3.],\n",
+       "       [1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 3., 3., 3., 3., 3.],\n",
+       "       [1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 3., 3., 3., 3., 3.],\n",
+       "       [1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 3., 3., 3., 3., 3.],\n",
+       "       [1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 3., 3., 3., 3., 3.]])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a9 = np.random.rand(10, 10).round()\n",
+    "[b9, c9] = np.hsplit(a9, [5])\n",
+    "print(b9, \"\\n\\n\\n\", c9)\n",
+    "\n",
+    "first = np.ones([10,5])\n",
+    "sec = np.ones([10,5])*2\n",
+    "threes = np.ones([10,5]) *3\n",
+    "\n",
+    "np.concatenate((first, sec, threes),axis=1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -886,19 +1189,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "383 µs ± 1.08 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "4.73 µs ± 59.1 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a list of the first 10,000 integers\n",
     "list10 = list(range(10000))\n",
     "# Use a for loop to multiply every element in a by 2\n",
-    "%timeit [i*2 for i in a]\n",
+    "%timeit [i*2 for i in list10]\n",
     "\n",
     "# Create a one-dimensional array of the first 10,000 integers\n",
     "array10 = np.arange(10000)\n",
     "# Use a ufunc to multiply every element in b by 2\n",
-    "%timeit b * 2"
+    "%timeit array10 * 2"
    ]
   },
   {
@@ -1076,10 +1388,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.544 0.897 0.717 0.95  0.541]\n",
+      " [0.544 0.971 0.963 0.02  0.497]\n",
+      " [0.68  0.435 0.044 0.769 0.091]\n",
+      " [0.469 0.04  0.678 0.659 0.24 ]\n",
+      " [0.837 0.666 0.1   0.374 0.324]\n",
+      " [0.148 0.728 0.944 0.11  0.088]\n",
+      " [0.349 0.78  0.73  0.582 0.312]\n",
+      " [0.979 0.686 0.513 0.209 0.943]\n",
+      " [0.701 0.3   0.543 0.03  0.526]\n",
+      " [0.328 0.361 0.407 0.19  0.813]]\n",
+      "[0.7298 0.599  0.4038 0.4172 0.4602 0.4036 0.5506 0.666  0.42   0.4198]\n",
+      "[[-0.1858  0.1672 -0.0128  0.2202 -0.1888]\n",
+      " [-0.055   0.372   0.364  -0.579  -0.102 ]\n",
+      " [ 0.2762  0.0312 -0.3598  0.3652 -0.3128]\n",
+      " [ 0.0518 -0.3772  0.2608  0.2418 -0.1772]\n",
+      " [ 0.3768  0.2058 -0.3602 -0.0862 -0.1362]\n",
+      " [-0.2556  0.3244  0.5404 -0.2936 -0.3156]\n",
+      " [-0.2016  0.2294  0.1794  0.0314 -0.2386]\n",
+      " [ 0.313   0.02   -0.153  -0.457   0.277 ]\n",
+      " [ 0.281  -0.12    0.123  -0.39    0.106 ]\n",
+      " [-0.0918 -0.0588 -0.0128 -0.2298  0.3932]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1.,2.,3.,4.],\n",
+    "             [5.,6.,7.,8.]])\n",
+    "\n",
+    "b = np.array([10,11,12,13])\n",
+    "\n",
+    "c = np.array([[1.],\n",
+    "             [20.]])\n",
+    "\n",
+    "b ** c\n",
+    "\n",
+    "d10 = np.random.rand(10,5).round(3)\n",
+    "print(d10)\n",
+    "rowmean = np.mean(d10, axis = 1)\n",
+    "print(rowmean)\n",
+    "\n",
+    "d10diff = d10 - np.array([rowmean]).T\n",
+    "print(d10diff)"
+   ]
   },
   {
    "cell_type": "markdown",
