--- a/exercises/Seaborn-Practice.ipynb
+++ b/exercises/Seaborn-Practice.ipynb
@@ -47,10 +47,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.4 ('eds-217')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "46678b732af22065499557143f448d98ea60a4f81e05bd6adc619b87abb4763c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
